@@ -55,6 +55,7 @@ CAY-1686 StringIdQuery - a query providing an optimized fetch for objects based 
 CAY-1688 [PATCH] rename DataDomain.getNode to getDataNode
 CAY-1693 Initial support for bitwise operators in Expression and SelectQuery - MySQL
 CAY-1698 ObjectIdRelationship support for AuditableChild
+CAY-1700 Split long DISJOINT_BY_ID prefetch query on several smaller queries
 
 Bug Fixes Since 3.1M3:
 
